# Assembler

./: .gitignore  CMakeLists.txt
Assembler/: .cproject  CMakeLists.txt
Assembler/src/: Assembler.cpp  Error.cpp  Error.h  Label.cpp  Line.cpp  Line.h  ListingFile.cpp  Machine.cpp  Machine.h  OpInfo.cpp  OpInfo.h  OperationTable.cpp  OperationTable.h  SymbolTable.cpp  SymbolTable.h  main.cpp
src/: Assembler.cpp  Error.cpp  Label.h  Line.cpp  Line.h  LineGS.cpp  ListingFile.h  LiteralTable.cpp  LiteralTable.h  Machine.cpp  Machine.h  OpInfo.h  OperationTable.cpp  OperationTable.h  Pass1.cpp  Pass1.hpp  Pass2.cpp  Pass2.hpp  SymbolTable.cpp  SymbolTable.h  TextRecord.cpp  TextRecord.h  Util.cpp  Util.hpp
tests/: SIC-Example-err-spaces.txt  SIC-Example-true-again3.txt
tests/Outputs/: SIC-Example-true-again3.txt
